# DocumentValidator

./: .envSample  Assignment_backend.docx  README.md  main.py  pyproject.toml
clients/: document_validator_client.py  document_validator_client_base.py  parse_data_client.py  parse_data_client_base.py  parse_labeling_ai_data_client.py
domains/: document_validator_domain.py  document_validator_domain_base.py  parser_ai_domain.py  parser_domain.py  parser_domain_base.py
models/: discrepancy.py  docs.py  dynamic_model_base.py  dynamic_model_pydantic.py  html_doc_json_scheme_model.py
repositories/: db_base.py  db_discrepancy.py  db_document.py
resources/: config.py  defines.py  dependencies.py  docs_config.yaml  exception.py  settings.py  tests_config.yaml  utils.py
services/: parse_logger_base.py  parse_logger_discrepancy.py  parse_service_base.py  parse_service_doc.py  parse_service_docx.py  parse_service_html.py  parse_service_pdf.py  storage_file_reader_service.py  storage_reader_service_base.py  validator_service.py  validator_service_base.py
storage/: 0_table.html  10_table.html  11_table.html  12_table.html  13_table.html  14_table.html  15_table.html  16_table.html  17_table.html  18_table.html  19_table.html  20_table.html  21_table.html  22_table.html  23_table.html  24_table.html  25_table.html  26_table.html  27_table.html  28_table.html  29_table.html  2_table.html  30_table.html  31_table.html  32_table.html  33_table.html  34_table.html  35_table.html  36_table.html  37_table.html  38_table.html  39_table.html  3_table.html  40_table.html  (+32 more)
(+1 files in other folders)
