[tool.poetry]
name = "DocumentValidator"
version = "0.1.0"
description = "Document Validator"
authors = ["Liad Kashanovsky <liadky@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.2"
aiosignal = "^1.3.1"
annotated-types = "^0.7.0"
anyio = "^4.6.2"
astroid = "^3.3.5"
async-timeout = "^5.0.1"
asyncio = "^3.4.3"
attrs = "^24.2.0"
click = "^8.1.7"
colorama = "^0.4.6"
coverage = "^7.5.0"
dill = "^0.3.8"
exceptiongroup = "^1.2.1"
fastapi = "^0.115.5"
frozenlist = "^1.4.1"
h11 = "^0.14.0"
httptools = "^0.6.1"
idna = "^3.7"
iniconfig = "^2.0.0"
isort = "^5.13.2"
mccabe = "^0.7.0"
multidict = "^6.0.5"
mypy = "^1.10.0"
mypy-extensions = "^1.0.0"
packaging = "^24.0"
platformdirs = "^4.2.1"
pluggy = "^1.5.0"
pydantic = "^2.7.1"
pydantic-core = "^2.18.2"
pyenchant = "^3.2.2"
pylint = "^3.1.0"
pytest = "^8.2.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
sniffio = "^1.3.1"
starlette = "^0.41.3"
tomli = "^2.0.1"
tomlkit = "^0.13.2"
typing-extensions = "^4.11.0"
uvicorn = "^0.32.0"
watchfiles = "^0.24.0"
websockets = "^14.1"
yarl = "^1.9.4"
beautifulsoup4 = "^4.12.3"
cryptography = "^43.0.0"
python-json-logger = "^2.0.7"
aiofiles = "^24.1.0"
lxml = "^5.3.0"
cssselect = "^1.2.0"
dyntamic = "^0.0.2"
beanie = "^1.26.0"
motor = {extras = ["srv"], version = "^3.6.0"}
dnspython = "^2.6.1"
pymongo = "^4.8.0"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
